package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]))

config_setting(
    name = "linux_x86_64",
    values = {
        "cpu": "k8",
    },
)

config_setting(
    name = "darwin_x86_64",
    values = {
        "cpu": "darwin",
    },
)

config_setting(
    name = "windows_x86_64",
    values = {
        "cpu": "x64_windows",
    },
)

genrule(
    name = "cue_runtime",
    srcs = select({
        "//cue:linux_x86_64": ["@cue_runtime_linux_x86_64//:cue"],
        "//cue:darwin_x86_64": ["@cue_runtime_darwin_x86_64//:cue"],
        "//cue:windows_x86_64": ["@cue_runtime_windows_x86_64//:cue"],
    }),
    outs = ["bin/cue"],
    cmd = "cp $(<) $(@)",
    executable = True,
    output_to_bindir = 1,
)
