package(default_visibility = ["//visibility:public"])

exports_files(glob(["*.bzl"]) + ["scripts/vet.sh"])

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "darwin_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "darwin_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:arm64",
    ],
)

genrule(
    name = "cue_runtime",
    srcs = select({
        "//cue:linux_x86_64": ["@cue_runtime_linux_x86_64//:cue"],
        "//cue:darwin_x86_64": ["@cue_runtime_darwin_x86_64//:cue"],
        "//cue:windows_x86_64": ["@cue_runtime_windows_x86_64//:cue"],
        "//cue:linux_arm64": ["@cue_runtime_linux_arm64//:cue"],
        "//cue:darwin_arm64": ["@cue_runtime_darwin_arm64//:cue"],
        "//cue:windows_arm64": ["@cue_runtime_windows_arm64//:cue"],
    }),
    outs = ["bin/cue"],
    cmd = "cp $(<) $(@)",
    executable = True,
    output_to_bindir = 1,
)
