load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export")

cue_export(
    name = "hello_world",
    src = "hello_world.cue",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "de",
    src = "de.cue",
    visibility = ["//visibility:public"],
    deps = ["//examples/lang:cue_de_library"],
)

cue_export(
    name = "en",
    src = "en.cue",
    visibility = ["//visibility:public"],
    deps = ["//examples/lang:cue_en_library"],
)

cue_export(
    name = "expr",
    src = "expr.cue",
    expression = "hello",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "required",
    src = "required.cue",
    visibility = ["//visibility:public"],
)
