load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "cue.go",
        "generate.go",
        "resolve.go",
    ],
    importpath = "github.com/tnarg/rules_cue/gazelle/cue",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_iancoleman_strcase//:go_default_library",
        "@org_cuelang_go//cue/ast:go_default_library",
        "@org_cuelang_go//cue/parser:go_default_library",
    ],
)
