load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/tnarg/rules_cue/cue/tools/cuepkg",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cuepkg",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
