load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_default_library",
    srcs = [
        "register_go_gen.cue",
        "types_go_gen.cue",
    ],
    importpath = "k8s.io/api/apps/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/k8s.io/api/core/v1:cue_default_library",
        "//examples/k8s.io/apimachinery/pkg/apis/meta/v1:cue_default_library",
        "//examples/k8s.io/apimachinery/pkg/runtime:cue_default_library",
        "//examples/k8s.io/apimachinery/pkg/util/intstr:cue_default_library",
    ],
)
