load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_v1_library",
    srcs = [
        "annotation_key_constants_go_gen.cue",
        "doc_go_gen.cue",
        "register_go_gen.cue",
        "types_go_gen.cue",
        "well_known_labels_go_gen.cue",
        "well_known_taints_go_gen.cue",
    ],
    importpath = "k8s.io/api/core/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/k8s.io/apimachinery/pkg/api/resource:cue_resource_library",
        "//examples/k8s.io/apimachinery/pkg/apis/meta/v1:cue_v1_library",
        "//examples/k8s.io/apimachinery/pkg/types:cue_types_library",
        "//examples/k8s.io/apimachinery/pkg/util/intstr:cue_intstr_library",
    ],
)
