load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_runtime_library",
    srcs = [
        "codec_go_gen.cue",
        "conversion_go_gen.cue",
        "converter_go_gen.cue",
        "doc_go_gen.cue",
        "helper_go_gen.cue",
        "interfaces_go_gen.cue",
        "negotiate_go_gen.cue",
        "swagger_doc_generator_go_gen.cue",
        "types_go_gen.cue",
        "types_proto_go_gen.cue",
    ],
    importpath = "k8s.io/apimachinery/pkg/runtime",
    visibility = ["//visibility:public"],
)
