load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_types_library",
    srcs = [
        "doc_go_gen.cue",
        "namespacedname_go_gen.cue",
        "nodename_go_gen.cue",
        "patch_go_gen.cue",
        "uid_go_gen.cue",
    ],
    importpath = "k8s.io/apimachinery/pkg/types",
    visibility = ["//visibility:public"],
)
