load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_default_library",
    srcs = [
        "doc_go_gen.cue",
        "filter_go_gen.cue",
        "mux_go_gen.cue",
        "streamwatcher_go_gen.cue",
        "watch_go_gen.cue",
    ],
    importpath = "k8s.io/apimachinery/pkg/watch",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/k8s.io/apimachinery/pkg/runtime:cue_default_library",
    ],
)
