load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_default_library",
    srcs = [
        "duration_go_gen.cue",
        "group_version_go_gen.cue",
        "meta_go_gen.cue",
        "micro_time_go_gen.cue",
        "register_go_gen.cue",
        "time_go_gen.cue",
        "time_proto_go_gen.cue",
        "types_go_gen.cue",
        "watch_go_gen.cue",
    ],
    importpath = "k8s.io/apimachinery/pkg/apis/meta/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/k8s.io/apimachinery/pkg/runtime:cue_default_library",
        "//examples/k8s.io/apimachinery/pkg/types:cue_default_library",
        "//examples/k8s.io/apimachinery/pkg/watch:cue_default_library",
    ],
)
